--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -9,6 +9,9 @@ body {
 	flex-wrap: wrap;
 }
 #studentSelector li {
+    margin-bottom: 20px;
+}
+#studentSelector li {
     list-style: none;
     flex: 0 0 25%;
     text-align: center;
@@ -57,6 +60,7 @@ body {
     .container {
         width: 100%;    
     }
+    
     #studentSelector li a {
         color: #fff;
         
